--- a/views/frm_carrera.xml
+++ b/views/frm_carrera.xml
@@ -232,7 +232,7 @@ $('#myModal').on('shown.bs.modal', function () {
     </div>
     <div >
             <a data-toggle="modal" data-target="#exampleModal" class="btn btn-success" style="float: right;">
-                <span class="glyphicon glyphicon-plus" ></span>Agregar 
+                <span class="glyphicon glyphicon-plus" ></span>Agregar Agrega
               </a>
         </div>
     <table class="table table-striped" id="tpelicula">
