--- a/views/frm_editarlab.xml
+++ b/views/frm_editarlab.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <odoo>
-    <template id='websitmateria' name='principal'>
+    <template id='webeditarlab' name='principal'>
      <html lang="en">
 
 <head>
@@ -93,12 +93,12 @@ $('#myModal').on('shown.bs.modal', function () {
             </li>
 
              <li class="nav-item">
-                <a class="nav-link" href="/">
+                <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Horario</span></a>
             </li>
              <li class="nav-item">
-                <a class="nav-link" href="/">
+                <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Informes</span></a>
             </li>
@@ -224,107 +224,59 @@ $('#myModal').on('shown.bs.modal', function () {
 
 <div class="container">
    
-    <h1>Materias</h1>
+    <h1>Editar Laboratorio</h1>
     <div class="form-group" >
         
        
       
     </div>
-    <div >
-            <a data-toggle="modal" data-target="#exampleModal" class="btn btn-success" style="float: right;">
-                <span class="glyphicon glyphicon-plus" ></span>Agregar Materia
-              </a>
+ 
+    
+    <form id="edit" name="edit" method="POST" action="/editarlab" t-foreach="lab" t-as="l">
+ 
+       
+        <div class="form-group row">
+                    <label for="inputPassword" class="col-sm-2 col-form-label"><b>Codigo del laboratorio</b></label>
+                    <div class="col-sm-10">
+                    <input style="font-weight: bold;" type="text" required="True"  class="form-control" id="codigo_lab" name="codigo_lab" t-att-value="l.codigo_lab"  />
+                    </div>
         </div>
-    <table class="table table-striped" id="tpelicula">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Materia</th>
-                <th>Carrera</th>
-                <th>Accion </th>
-            </tr>
-            </thead>
-             
-                <tr t-foreach="materia" t-as="m">
+          <div class="form-group row">
+                    <label for="inputPassword" class="col-sm-2 col-form-label"><b>Nombre del laboratorio</b></label>
+                    <div class="col-sm-10">
+                    <input style="font-weight: bold;" type="text" required="True" class="form-control" id="nombre_lab" name="nombre_lab" t-att-value="l.nombre_lab" />
+                    </div>
+        </div>
+        <div>
+                    <label for=""><b>Carrera a la que pertenece</b></label>
+                    <select required="True" t-att-value="clave_puerta" id="clave_puerta" name="clave_puerta" > 
+                        <option value="">Eliga una opcion</option>
+                         <option value="Cerrado">Cerrado</option>
+                         <option value="Abierto">Abierto</option>
+                    </select>
+        </div>
+        <div class="form-group row">
+                    <label for="inputPassword" class="col-sm-2 col-form-label"><b>Clave de la llave</b></label>
+                    <div class="col-sm-10">
+                    <input style="font-weight: bold;" type="text" required="True" class="form-control" id="clave_llave" name="clave_llave" t-att-value="l.clave_llave" />
+                    </div>
+        </div>
+        <div class="modal-footer">
+            <a type="button" href="/lab"  class="btn btn-danger" data-dismiss="modal">Cancelar</a>
+            <button type="submit"  class="btn btn-success">Guardar</button>
+        </div>
+    </form>
 
-                    <th><t t-esc="m.id"/></th>
-                    <th><t t-esc="m.nombre_materia"/></th>
-                   <th><t t-esc="m.carrera_id.nombre_carrera"/></th>
-                    <th><a  t-att-href="('/eliminarmateria?id=%s' % m.id)"  class="fas fa-archive"></a>
-                    <a  t-att-href="('/editarmateria?id=%s' % m.id)"  class="fas fa-archive"></a></th>
-                           
-   
-                    
-                </tr>
-            
-    
-            
-    
-        </table>
 </div>
 
                     <!--Cerrar aqui plantilla-->
-                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Agregar Materia</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true"></span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form method="POST" action="/guardar_materia">
- 
-                <div class="form-group row">
-                    <label for="inputPassword" class="col-sm-2 col-form-label">Nombre de la materia</label>
-                    <div class="col-sm-10">
-                    <input type="text" required="True" pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,48}" class="form-control" id="nombre_materia" name="nombre_materia" t-att-value="nombre_materia" placeholder="Ingrese nombre de la materia"/>
-                    </div>
-                </div>
-                  <div>
-                    <label for="">Carrera a la que pertenece</label>
-                    <select required="True"  id="carrera" name="carrera" > 
-                        <option value="">Eliga una opcion</option>
-                        <div t-foreach="c" t-as="data">
-                         <option t-att-value="id_curso"><t t-esc="data.nombre_carrera"></t></option>
-                         </div>
-                    </select>
-                            </div>
-            <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
-                    <button type="submit" class="btn btn-success">Guardar</button>
-                </div>
-            </form>
-      </div>
-      
-    </div>
-  </div>
-</div>
+                
 <!--           AQUIIIIIIIIIIIIIIIII VAAAAAAAAAAAAAA OTROOOOOOOOOOOO MODAAAAL-->
 
 
 
 
-<div class="modal" id="editModal" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Eliminar carrera</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Cancelar">
-          <span aria-hidden="true"></span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>Desea eliminar la carrera seleccionada?</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger">Confirmar</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-      </div>
-    </div>
-  </div>
-</div>
+
 
                     <!-- AQUIIIIIIIIIIIIIIIIII ACABAAAAAAAAAAAAAAAAAAAAAAAAAA -->
                     <div class="row">
