--- a/views/frm_editarcurso.xml
+++ b/views/frm_editarcurso.xml
@@ -103,7 +103,7 @@ $('#myModal').on('shown.bs.modal', function () {
                     <span>Informes</span></a>
             </li>
              <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="/lab">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Laboratorio</span></a>
             </li>
