--- a/views/frm_materia.xml
+++ b/views/frm_materia.xml
@@ -93,7 +93,7 @@ $('#myModal').on('shown.bs.modal', function () {
             </li>
 
              <li class="nav-item">
-                <a class="nav-link" href="/">
+                <a class="nav-link" href="/horarios">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Horario</span></a>
             </li>
@@ -250,8 +250,8 @@ $('#myModal').on('shown.bs.modal', function () {
                     <th><t t-esc="m.id"/></th>
                     <th><t t-esc="m.nombre_materia"/></th>
                    <th><t t-esc="m.carrera_id.nombre_carrera"/></th>
-                    <th><a  t-att-href="('/eliminarmateria?id=%s' % m.id)"  class="fas fa-archive"></a>
-                    <a  t-att-href="('/editarmateria?id=%s' % m.id)"  class="fas fa-archive"></a></th>
+                    <th><a t-att-href="('/editarmateria?id=%s' % m.id)" ><i class="fa fa-pencil-alt"></i></a>
+                       <a t-att-href="('/eliminarmateria?id=%s' % m.id)" class="btn btn-danger"><i class="fa fa-times"></i></a></th>
                            
    
                     
